feat: complete KnowledgeService and AdminKnowledgeController